# Agentic-human-in-the-loop-evaluation

./: README.md  load_dataset.py  metadata.json  pyproject.toml
backend/: __init__.py  agents.py  database.py  inference.py  main.py  models.py  utils.py
dataset/: samples.json
frontend/: app.py
