[project]
name = "hitl-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]
